--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,16 +1,33 @@
 .header {
-    background-color: #d9d9d9;
+    background-color: #eeeeee;
     padding: 8px 15px;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    max-width: 100%;
     max-width: 350px;
     max-height: 40px;
     border-radius: 0px 0px 10px 10px;
     border: 1px solid black;
     border-top: 0px solid black;
+
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.header-user-info {
+    background-color: #eeeeee;
+    padding: 8px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 350px;
+    max-height: 40px;
+    border-radius: 0px 0px 0px 10px;
+    border: 1px solid black;
+    border-top: 0px solid black;
+
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .header a {
@@ -24,6 +41,17 @@
   font-weight: bold;
 }
 
+.header-user-info a {
+  text-decoration: none;
+  color: #1a1a1a;
+  font-family: Verdana, sans-serif;
+}
+
+.header-user-info #new-ticket {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .navbar-element {
   padding-left: 10px;
   padding-right: 10px;
@@ -33,7 +61,31 @@
   cursor: pointer;
 }
 
-#navbar-logo {
+.navbar-logo {
   width: 27px;
   height: 27px;
+}
+
+.user-info-dropdown {
+  position: absolute;
+  background-color:#eeeeee;
+  border-radius: 0px 0px 10px 10px;
+  border: 1px solid black;
+  border-top: 0px;
+  
+  margin-top: 12px;
+  margin-left: -24px;
+  padding: 0px;
+
+  width: 75px;
+  height: 50px;
+}
+
+.user-info-dropdown ul {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 13px;
+  list-style-type: none;
+
+  margin-top: 0px;
+  margin-left: -30px;
 }
