Fixed authentication and need to add server logic for adding tickets

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ body {
     align-items:center;
     justify-content: center;
 }
+
+#home-message {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
