--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #eeeeee;
+    background-color: #f1f1f1;
     padding: 8px 15px;
     display: flex;
     justify-content: center;
@@ -8,14 +8,13 @@
     max-width: 350px;
     max-height: 40px;
     border-radius: 0px 0px 10px 10px;
-    border: 1px solid black;
-    border-top: 0px solid black;
+    border: 1px solid #ddd;
 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
 .header-user-info {
-    background-color: #eeeeee;
+    background-color: #f1f1f1;
     padding: 8px 15px;
     display: flex;
     justify-content: center;
@@ -24,10 +23,10 @@
     max-width: 350px;
     max-height: 40px;
     border-radius: 0px 0px 0px 10px;
-    border: 1px solid black;
+    border: 1px solid #ddd;
     border-top: 0px solid black;
 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
 .header a {
@@ -70,7 +69,7 @@
   position: absolute;
   background-color:#eeeeee;
   border-radius: 0px 0px 10px 10px;
-  border: 1px solid black;
+  border: 1px solid #ddd;
   border-top: 0px;
   
   margin-top: 12px;
@@ -79,6 +78,7 @@
 
   width: 75px;
   height: 50px;
+
 }
 
 .user-info-dropdown ul {
