--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -81,8 +81,9 @@
     padding: 0px;
 
     width: 75px;
-    height: 50px;
+    height: 70px;
 
+    cursor: default;
 }
 
 .user-info-dropdown ul {
@@ -92,4 +93,10 @@
 
     margin-top: 0px;
     margin-left: -30px;
+}
+
+
+.logout-button {
+    font-size: 14px;
+    cursor: pointer;
 }
