--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -18,8 +18,6 @@
     align-content: center;
     align-items: center;
 
-    height: 200px;
-
     font-family: Verdana, sans-serif;
 }
 
@@ -36,6 +34,8 @@
     width: 150px; 
     margin: 0 auto; 
     padding: 20px;
+    padding-top: 11px;
+    padding-bottom: 0px;
     border-radius: 8px;
 }
 
@@ -50,7 +50,6 @@
 }
 
 #toggle-button {
-    margin: 0px;
     margin-left: 5px;
 }
 
@@ -87,4 +86,12 @@ button:hover {
   background-color: #F3F4F6;
   text-decoration: none;
   transition-duration: 0.1s;
+}
+
+.success {
+    color: green;
+}
+
+.failure {
+    color: red;
 }
